--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
             theme: {
                 extend: {
                     colors: {
-                        "primary": "#1193d4",
+                        "primary": "#5a2653",
                         "secondary": "#d4af37",
                         "background-light": "#f6f7f8",
                         "background-dark": "#101c22",
